--- a/vprodbdeployment.yaml
+++ b/vprodbdeployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: vprodb
-          image: vprofile/vprofiledb:v1
+          image: vprofile/vprofiledb:V1
           args:
             - "ignore-db-dir=lost+found"
           ports:
